--- a/ToDoApp.Mobile/Views/ToDoListPage.xaml
+++ b/ToDoApp.Mobile/Views/ToDoListPage.xaml
@@ -32,7 +32,7 @@
                 </Grid>
                 <RefreshView
                     Grid.Row="1"
-                    IsRefreshing="{Binding IsBusy}"
+                    IsRefreshing="{Binding IsRefreshing}"
                     Command="{Binding RefreshToDoListCommand}"
                     RefreshColor="{DynamicResource PrimaryFpTheme}">
                     <CollectionView
