MAUI App: - Testing: Updated base Url for testing on Android Emulator to connect the localhost - Registered more singletons for pages - APIs test: Removed delays and test code to check the APIs

--- a/ToDoApp.Mobile/Views/AddToDoPage.xaml
+++ b/ToDoApp.Mobile/Views/AddToDoPage.xaml
@@ -43,8 +43,9 @@
                 FontSize="16"
                 FontAttributes="Bold" />
             <Picker
-                SelectedItem="{Binding TodoPriority}"
-                ItemsSource="{Binding PriorityItems}" />
+                SelectedItem="{Binding TodoPriority, Mode=TwoWay}"
+                ItemsSource="{Binding PriorityItems}">
+            </Picker>
             <Label
                 Text="Due Date"
                 FontSize="16"
