Integration Testing: MAUI & WebAPI
- Tested the CRUD operations and fixed necessary item found.
- TouchBase on the UI side and Fixed the minor UI related issues.
- Updated the navigation flow, Popup prompts foe Delete and Edit.

--- a/ToDoApp.Mobile/Views/AddToDoPage.xaml
+++ b/ToDoApp.Mobile/Views/AddToDoPage.xaml
@@ -13,7 +13,7 @@
             BackgroundColor="{DynamicResource PrimaryFpTheme}"
             Grid.Row="0">
             <Label
-                Text="Todo List"
+                Text="{Binding PageTitle}"
                 FontSize="26"
                 FontAttributes="Bold"
                 Padding="10,5"
