--- a/ToDoApp.Mobile/Views/AddToDoPage.xaml
+++ b/ToDoApp.Mobile/Views/AddToDoPage.xaml
@@ -43,6 +43,7 @@
                 FontSize="16"
                 FontAttributes="Bold" />
             <Picker
+                SelectedIndex="{Binding ToDoPickerSelectedIndex}"
                 SelectedItem="{Binding TodoPriority, Mode=TwoWay}"
                 ItemsSource="{Binding PriorityItems}">
             </Picker>
@@ -65,7 +66,7 @@
         </VerticalStackLayout>
         <Button
             Grid.Row="2"
-            Text="Submit"
+            Text="{Binding ButtonSubmitTitle}"
             CornerRadius="5"
             BackgroundColor="{DynamicResource PrimaryFpTheme}"
             TextColor="White"
