--- a/ToDoApp.Mobile/Views/BaseContentPage.xaml
+++ b/ToDoApp.Mobile/Views/BaseContentPage.xaml
@@ -3,10 +3,10 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-             xmlns:viewmodels="clr-namespace:ToDoApp.Mobile.ViewModels"
+             xmlns:viewModels="clr-namespace:ToDoApp.Mobile.ViewModels"
              xmlns:nav="clr-namespace:Microsoft.Maui.Controls;assembly=Microsoft.Maui.Controls"
              x:Class="ToDoApp.Mobile.Views.BaseContentPage"
-             x:DataType="viewmodels:BaseViewModel"
+             x:DataType="viewModels:BaseViewModel"
              nav:NavigationPage.HasNavigationBar="{Binding HasNavigationBar}">
     <ContentPage.Behaviors>
         <toolkit:EventToCommandBehavior 
