--- a/ToDoApp.Mobile/Views/ToDoItemDetailPage.xaml
+++ b/ToDoApp.Mobile/Views/ToDoItemDetailPage.xaml
@@ -2,13 +2,12 @@
 
 <pages:BaseContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
                        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                       xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-                       xmlns:viewmodels="clr-namespace:ToDoApp.Mobile.ViewModels"
+                       xmlns:viewModels="clr-namespace:ToDoApp.Mobile.ViewModels"
                        xmlns:nav="clr-namespace:Microsoft.Maui.Controls;assembly=Microsoft.Maui.Controls"
                        xmlns:models="clr-namespace:ToDoApp.Mobile.Models"
                        xmlns:pages="clr-namespace:ToDoApp.Mobile.Views"
                        x:Class="ToDoApp.Mobile.Views.ToDoItemDetailPage"
-                       x:DataType="viewmodels:ToDoItemDetailViewModel"
+                       x:DataType="viewModels:ToDoItemDetailViewModel"
                        nav:NavigationPage.HasNavigationBar="{Binding HasNavigationBar}">
     <pages:BaseContentPage.Content>
         <Grid RowDefinitions="1*,9*">
